add reset button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
         </div>
         <button onclick="reset()">Reset</button>
+        <button onclick="rainbow()">Rainbow</button>
     </div>
    <div class="grid"></div> 
 </body>
