--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <button onclick="reset()">Reset</button>
         <button onclick="rainbow()">Rainbow</button>
     </div>
+    <div class="slider-div">
+        <label>50</label>
+        <input type="range" min="5" max="50" value="20" step="1" id="square-slider">
+        <label>5</label>
+    </div>
    <div class="grid"></div> 
 </body>
 </html>
